# ComfyUI_AC_FUNV8Beta1

./: AC_DESIGN_CN.py  AC_FUN.py  AC_Large.py  AC_LargeV2.py  AC_Main.py  AC_combos.py  README.md  __init__.py  image_tools.py  pyproject.toml  requirements.txt  source_image.py  super_ac.py  super_ac_ksample.py
Negative/: 3D卡通反向提示词-001.txt  3D卡通反向提示词-002.txt  3D卡通反向提示词-003.txt  3D卡通反向提示词-004.txt  3D卡通反向提示词-005.txt  3D卡通反向提示词-006.txt  AI摄影反向提示词-001.txt  AI摄影反向提示词-003.txt  AI摄影反向提示词-004.txt  AI摄影反向提示词-005.txt  AI摄影反向提示词-006.txt  IP字体通用反向提示词.txt  人物写实反向提示词.txt  动漫二次元反向提示词-002.txt  国风反向提示词-001.txt  国风反向提示词-002.txt  国风反向提示词-003.txt  国风反向提示词-004.txt  室内反向提示词-001.txt  建筑反向提示词-002.txt  建筑反向提示词-003.txt  摄影系列反向提示词-001.txt  摄影系列反向提示词-002.txt  摄影系列反向提示词-004.txt  摄影系列反向提示词-005.txt  景观反向提示词-001.txt  景观反向提示词-003.txt  景观反向提示词-004.txt  景观反向提示词-005.txt  景观反向提示词-006.txt  景观概念平面负向提示词-001.txt  景观湿地公园反向提示词.txt  真实人物反向提示词-001.txt  真实人物反向提示词-002.txt  真实人物反向提示词-003.txt  真实人物反向提示词-004.txt  艺术字体反向提示词.txt  艺术风格反向提示词.txt  通用反向-001.txt  通用反向提示词002.txt  (+2 more)
Positive/Architecture/: UV建筑-001.txt  UV建筑-002.txt  城市规划设计超高层塔楼.txt  城市规划设计鸟瞰图.txt  建筑设计常规住宅-002.txt  建筑设计常规住宅-003.txt  建筑设计常规住宅-004.txt  白色简约建筑类型-001.txt  通用型城市规划设计-001.txt  非线性建筑ZAHA风格-001.txt  非线性建筑设计提示词-001.txt  非线性建筑雪地场景.txt  非线性建筑黄昏场景.txt
Positive/Factory/: 工业设计3D提示词-B1.txt
Positive/InDoor_AC/: 室内设计儿童房提示词.txt  室内设计奶油风-001.txt  室内设计平面图-001.txt  室内设计提示词-001.txt  室内设计提示词-002.txt  室内设计现代书房-001.txt  室内设计现代卧室-002.txt  室内设计现代客厅-002.txt  室内设计现代客厅.txt  室内设计轻奢卧室提示词-001.txt  室内设计通用卧室提示词.txt  新中式富丽系列-002.txt  新中式富丽系列-003.txt  日式无印良品室内-001.txt  现代简约厨房.txt
(+20 files in other folders)
