[project]
name = "ComfyUI_AC_FUNV8Beta1"
description = "ComfyUI Large Tools"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["Pillow==12.2.0", "scipy==1.17.1", "torch==2.11.0"]

[project.urls]
Repository = "https://github.com/A719689614/ComfyUI_AC_FUNV8Beta1"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "acheng"
DisplayName = "ComfyUI_AC_FUNV8Beta1"
Icon = "https://avatars.githubusercontent.com/u/142242136?v=4"
